# Ardu-Citron

./: .gitignore  Commande  README.md  sauvegarde_git.sh
Ardu-Citron-3/Code/ESP_32/: pinout.txt
Ardu-Citron-3/Code/ESP_32/Actionneur_Check/: Actionneur_Check.ino
Ardu-Citron-3/Code/ESP_32/Teste_Mpu/: Teste_Mpu.ino
Ardu-Citron-3/Code/ESP_32/main/: README.md  buzzer.cpp  buzzer.h  config.h  failsafe.cpp  failsafe.h  imu.cpp  imu.h  kalman.cpp  kalman.h  main.ino  mixer.cpp  mixer.h  pid.cpp  pid.h
Ardu-Citron-3/Code/Pi/: benchmark_hybrid.py
Ardu-Citron-3/Code/Pi/V1/: Nouveau document  benchmark_hybrid.py
Ardu-Citron-3/Code/Pi/V2/rust_localizer/: Cargo.toml  tiny_drone_localizer.onnx
Ardu-Citron-3/Code/Pi/V2/rust_localizer/src/: main.rs
Ardu-Citron-3/Code/Pi/drone_localizer/: Cargo.toml
Ardu-Citron-3/Document/: Cahier des charges citron.odt  Estimation_vitesse.ods
Ardu-Citron-3/Model_3d/: Drone.blend.blend  Rail_Femelle.stl  Rail_Male.stl
Ardu-Citron-3/Sol/CNN/: Prepare.py  aruco_detector.py  conversion.py  evaluate_cnn.py  evaluate_onnx.py  export_onnx.py  generate_dataset_v2.py  run_rust_benchmark.py  tiny_drone_cnn.pth  tiny_drone_localizer.onnx  tiny_drone_localizer.onnx.data  train_cnn.py
Ardu-Citron-3/Sol/CNN/checkpoints/: tiny_drone_epoch_1.onnx  tiny_drone_epoch_1.onnx.data  tiny_drone_epoch_10.onnx  tiny_drone_epoch_10.onnx.data  tiny_drone_epoch_11.onnx  tiny_drone_epoch_11.onnx.data  tiny_drone_epoch_12.onnx  tiny_drone_epoch_12.onnx.data  tiny_drone_epoch_13.onnx  tiny_drone_epoch_13.onnx.data  tiny_drone_epoch_14.onnx  (+18 more)
(+3 files in other folders)
