[package]
name = "rust_localizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "2.0.0-rc.12"
ndarray = "0.15.6" 
thiserror = "1.0"
image = "0.24.7"
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] } # ✨ Ajout pour structurer les données du JSON
serde_json = "1.0"                                  # ✨ Ajout du parser JSON
